--- a/public/index.html
+++ b/public/index.html
@@ -263,7 +263,7 @@
                             disabled={this.state.onSending}
                             onClick={() => this.publishMessage()}>
                             {this.state.onSending ?
-                                <div style={{color: "#0bbb00"}}>正在发送</div> :
+                                <div style={{color: "#a7a7a7"}}>正在发送</div> :
                                 <div style={{color: "#000000"}}>点击发送</div>}
                         </button>
                     </div>
