switch to min resources

--- a/public/index.html
+++ b/public/index.html
@@ -65,11 +65,11 @@
             overflow-y: auto;
         }
     </style>
-    <script src="https://cdn.staticfile.org/react/16.4.0/umd/react.development.js"></script>
-    <script src="https://cdn.staticfile.org/react-dom/16.4.0/umd/react-dom.development.js"></script>
-    <script src="https://cdn.staticfile.org/babel-standalone/6.26.0/babel.min.js"></script>
-    <script src="https://cdn.staticfile.org/superagent/4.1.0/superagent.js"></script>
-    <script src="https://cdn.bootcss.com/node-uuid/1.4.8/uuid.min.js"></script>
+    <script src="http://cdn.staticfile.org/react/16.4.0/umd/react.production.min.js"></script>
+    <script src="http://cdn.staticfile.org/react-dom/16.4.0/umd/react-dom.production.min.js"></script>
+    <script src="http://cdn.staticfile.org/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="http://cdn.staticfile.org/superagent/4.1.0/superagent.min.js"></script>
+    <script src="http://cdn.staticfile.org/node-uuid/1.4.8/uuid.min.js"></script>
 </head>
 <body>
 <div id="root"></div>
