--- a/public/index.html
+++ b/public/index.html
@@ -75,13 +75,12 @@
 <div id="root"></div>
 </body>
 <script type="text/jsx">
-    window.onbeforeunload = function (e) {
-        e = e || window.event;
-        if (e) {
-            e.returnValue = '关闭提示';
-        }
-        return '关闭提示';
-    };
+    window.addEventListener('beforeunload', (event) => {
+        // Cancel the event as stated by the standard.
+        event.preventDefault();
+        // Chrome requires returnValue to be set.
+        event.returnValue = '';
+    });
 
     class Abs extends React.Component {
 
