--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8"/>
-    <title>Hello React!</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico">
+    <title>出云而日出</title>
     <style>
         body {
             font-size: 12px;
