--- a/public/index.html
+++ b/public/index.html
@@ -267,7 +267,7 @@
             let assign = Object.assign({}, this.state);
             assign.inputRows[idx].input = inputState;
             this.setState(assign);
-            console.log(this.state.inputRows.filter(x => x !== undefined).map(x => x.input));
+            console.log(this.state.inputRows);
         }
 
         /**
